import {
  Entity,
  Column,
  PrimaryGeneratedColumn,
  CreateDateColumn,
  UpdateDateColumn,
  ManyToOne,
  JoinColumn,
} from 'typeorm';
import { User } from '../../users/entities/user.entity';
import { Document } from '../../documents/entities/document.entity';

@Entity('signatures')
export class Signature {
  @PrimaryGeneratedColumn('uuid')
  id: string;

  @Column({ name: 'document_id' })
  documentId: string;

  @ManyToOne(() => Document, { onDelete: 'CASCADE' })
  @JoinColumn({ name: 'document_id' })
  document: Document;

  @Column({ name: 'user_id' })
  userId: string;

  @ManyToOne(() => User, { onDelete: 'CASCADE' })
  @JoinColumn({ name: 'user_id' })
  user: User;

  @Column({ type: 'text', name: 'signature_data' })
  signatureData: string;

  @Column({ name: 'document_hash' })
  documentHash: string;

  @Column({ name: 'signed_at', type: 'timestamp' })
  signedAt: Date;

  @Column({ nullable: true })
  reason: string;

  @Column({ nullable: true })
  position: string; // JSON string con { page, x, y }

  @Column({ default: true })
  valid: boolean;

  @Column({ type: 'jsonb', nullable: true })
  metadata: Record<string, any>;

  @CreateDateColumn({ name: 'created_at' })
  createdAt: Date;

  @UpdateDateColumn({ name: 'updated_at' })
  updatedAt: Date;

  @Column({ nullable: true })
  order: number; // Orden de firma en secuencia

  @Column({ nullable: true })
  requiredSigners: number; // Número de firmantes requeridos para validez

  @Column({ type: 'simple-array', nullable: true })
  pendingSigners: string[]; // IDs de usuarios pendientes de firmar

  @Column({ default: false })
  isComplete: boolean; // Indica si el proceso de múltiples firmas está completo
}
